--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,9 @@ jobs:
             qt_arch: ""
             qt_version: "6.5.3"
             qt_modules: "qt5compat qtimageformats qtnetworkauth"
+            linuxdeploy_hash: "4648f278ab3ef31f819e67c30d50f462640e5365a77637d7e6f2ad9fd0b4522a linuxdeploy-x86_64.AppImage"
+            linuxdeploy_qt_hash: "15106be885c1c48a021198e7e1e9a48ce9d02a86dd0a1848f00bdbf3c1c92724  linuxdeploy-plugin-qt-x86_64.AppImage"
+            appimageupdate_hash: "f1747cf60058e99f1bb9099ee9787d16c10241313b7acec81810ea1b1e568c11  AppImageUpdate-x86_64.AppImage"
 
           - os: windows-2022
             name: "Windows-MinGW-w64"
@@ -249,11 +252,19 @@ jobs:
 
       - name: Prepare AppImage (Linux)
         if: runner.os == 'Linux' && matrix.qt_ver != 5
+        env:
+          APPIMAGEUPDATE_HASH: ${{ matrix.appimageupdate_hash }}
+          LINUXDEPLOY_HASH: ${{ matrix.linuxdeploy_hash }}
+          LINUXDEPLOY_QT_HASH: ${{ matrix.linuxdeploy_qt_hash }}
         run: |
-          wget "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage"
-          wget "https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage"
+          wget "https://github.com/linuxdeploy/linuxdeploy/releases/download/1-alpha-20250213-2/linuxdeploy-x86_64.AppImage"
+          wget "https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/1-alpha-20250213-1/linuxdeploy-plugin-qt-x86_64.AppImage"
 
-          wget "https://github.com/AppImageCommunity/AppImageUpdate/releases/download/continuous/AppImageUpdate-x86_64.AppImage"
+          wget "https://github.com/AppImageCommunity/AppImageUpdate/releases/download/2.0.0-alpha-1-20241225/AppImageUpdate-x86_64.AppImage"
+
+          sha256sum -c - <<< "$LINUXDEPLOY_HASH"
+          sha256sum -c - <<< "$LINUXDEPLOY_QT_HASH"
+          sha256sum -c - <<< "$APPIMAGEUPDATE_HASH"
 
           sudo apt install libopengl0 libfuse2
 
