ci: don't install libfuse2
Signed-off-by: Seth Flynn <getchoo@tuta.io>
(cherry picked from commit 671aad88f52e3fbba872e80f2805c0c5c64b7a8d)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -266,7 +266,7 @@ jobs:
           sha256sum -c - <<< "$LINUXDEPLOY_QT_HASH"
           sha256sum -c - <<< "$APPIMAGEUPDATE_HASH"
 
-          sudo apt install libopengl0 libfuse2
+          sudo apt install libopengl0
 
       - name: Add QT_HOST_PATH var (Windows MSVC arm64)
         if: runner.os == 'Windows' && matrix.architecture == 'arm64'
