ci(nix): correctly parse action env vars as bools
Signed-off-by: Seth Flynn <getchoo@tuta.io>
(cherry picked from commit 76bec385d6803e94899028695226d872185b3d39)

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -71,7 +71,7 @@ jobs:
 
         # For PRs
       - name: Setup Nix Magic Cache
-        if: ${{ env.USE_DETERMINATE }}
+        if: ${{ env.USE_DETERMINATE == 'true' }}
         uses: DeterminateSystems/flakehub-cache-action@v1
 
         # For in-tree builds
@@ -87,11 +87,11 @@ jobs:
           nix flake check --print-build-logs --show-trace
 
       - name: Build debug package
-        if: ${{ env.DEBUG }}
+        if: ${{ env.DEBUG == 'true' }}
         run: |
           nix build --print-build-logs .#prismlauncher-debug
 
       - name: Build release package
-        if: ${{ !env.DEBUG }}
+        if: ${{ env.DEBUG == 'false' }}
         run: |
           nix build --print-build-logs .#prismlauncher
