ci(nix): pin release packages in cachix
Signed-off-by: Seth Flynn <getchoo@tuta.io>
(cherry picked from commit 180292098d9c4ad87ed0d9babed92e152feb5475)

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -93,5 +93,11 @@ jobs:
 
       - name: Build release package
         if: ${{ env.DEBUG == 'false' }}
+        env:
+          TAG: ${{ github.ref_name }}
+          SYSTEM: ${{ matrix.system }}
         run: |
           nix build --print-build-logs .#prismlauncher
+          nix build --no-link --print-out-paths .#prismlauncher \
+            | tee -a "$GITHUB_STEP_SUMMARY" \
+            | xargs cachix pin prismlauncher "$TAG"-"$SYSTEM"
