--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -16,9 +16,9 @@ jobs:
     permissions:
       contents: write # for korthout/backport-action to create branch
       pull-requests: write # for korthout/backport-action to create PR to backport
-      actions: write # for korthout/backport-action to create PR with workflow changes
+      # actions: write # for korthout/backport-action to create PR with workflow changes
     name: Backport Pull Request
-    if: github.repository_owner == 'PrismLauncher' && github.event.pull_request.merged == true && (github.event_name != 'labeled' || startsWith('backport', github.event.label.name))
+    if: github.repository_owner == 'sogik' && github.event.pull_request.merged == true && (github.event_name != 'labeled' || startsWith('backport', github.event.label.name))
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,4 +30,3 @@ jobs:
           # Config README: https://github.com/korthout/backport-action#backport-action
           pull_description: |-
             Bot-based backport to `${target_branch}`, triggered by a label in #${pull_number}.
-
