--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -57,6 +57,6 @@ jobs:
       - name: Build Flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
-          bundle: PrismLauncher-${{ runner.os }}-${{ env.VERSION }}-Flatpak.flatpak
-          manifest-path: flatpak/org.prismlauncher.PrismLauncher.yml
+          bundle: NMCLauncher-${{ runner.os }}-${{ env.VERSION }}-Flatpak.flatpak
+          manifest-path: flatpak/org.sogik.NMCLauncher.yml
           arch: ${{ matrix.arch }}
