--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish
 
 on:
   release:
-    types: [ released ]
+    types: [released]
 
 permissions:
   contents: read
@@ -17,7 +17,7 @@ jobs:
       - name: Publish on Winget
         uses: vedantmgoyal2009/winget-releaser@v2
         with:
-          identifier: PrismLauncher.PrismLauncher
+          identifier: sogik.NMCLauncher
           version: ${{ github.event.release.tag_name }}
-          installers-regex: 'PrismLauncher-Windows-MSVC(:?-arm64|-Legacy)?-Setup-.+\.exe$'
+          installers-regex: 'NMCLauncher-Windows-MSVC(:?-arm64|-Legacy)?-Setup-.+\.exe$'
           token: ${{ secrets.WINGET_TOKEN }}
