--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: "true"
-          path: "PrismLauncher-source"
+          path: "NMCLauncher-source"
       - name: Download artifacts
         uses: actions/download-artifact@v4
       - name: Grab and store version
@@ -44,38 +44,38 @@ jobs:
           echo "VERSION=$tag_name" >> $GITHUB_ENV
       - name: Package artifacts properly
         run: |
-          mv ${{ github.workspace }}/PrismLauncher-source PrismLauncher-${{ env.VERSION }}
-          mv PrismLauncher-Linux-Qt6-Portable*/PrismLauncher-portable.tar.gz PrismLauncher-Linux-Qt6-Portable-${{ env.VERSION }}.tar.gz
-          mv PrismLauncher-Linux-Qt5-Portable*/PrismLauncher-portable.tar.gz PrismLauncher-Linux-Qt5-Portable-${{ env.VERSION }}.tar.gz
-          mv PrismLauncher-*.AppImage/PrismLauncher-*.AppImage PrismLauncher-Linux-x86_64.AppImage
-          mv PrismLauncher-*.AppImage.zsync/PrismLauncher-*.AppImage.zsync PrismLauncher-Linux-x86_64.AppImage.zsync
-          mv PrismLauncher-macOS-Legacy*/PrismLauncher.zip PrismLauncher-macOS-Legacy-${{ env.VERSION }}.zip
-          mv PrismLauncher-macOS*/PrismLauncher.zip PrismLauncher-macOS-${{ env.VERSION }}.zip
+          mv ${{ github.workspace }}/NMCLauncher-source NMCLauncher-${{ env.VERSION }}
+          mv NMCLauncher-Linux-Qt6-Portable*/NMCLauncher-portable.tar.gz NMCLauncher-Linux-Qt6-Portable-${{ env.VERSION }}.tar.gz
+          mv NMCLauncher-Linux-Qt5-Portable*/NMCLauncher-portable.tar.gz NMCLauncher-Linux-Qt5-Portable-${{ env.VERSION }}.tar.gz
+          mv NMCLauncher-*.AppImage/NMCLauncher-*.AppImage NMCLauncher-Linux-x86_64.AppImage
+          mv NMCLauncher-*.AppImage.zsync/NMCLauncher-*.AppImage.zsync NMCLauncher-Linux-x86_64.AppImage.zsync
+          mv NMCLauncher-macOS-Legacy*/NMCLauncher.zip NMCLauncher-macOS-Legacy-${{ env.VERSION }}.zip
+          mv NMCLauncher-macOS*/NMCLauncher.zip NMCLauncher-macOS-${{ env.VERSION }}.zip
 
-          tar --exclude='.git' -czf PrismLauncher-${{ env.VERSION }}.tar.gz PrismLauncher-${{ env.VERSION }}
+          tar --exclude='.git' -czf NMCLauncher-${{ env.VERSION }}.tar.gz NMCLauncher-${{ env.VERSION }}
 
-          for d in PrismLauncher-Windows-MSVC*; do
+          for d in NMCLauncher-Windows-MSVC*; do
             cd "${d}" || continue
             LEGACY="$(echo -n ${d} | grep -o Legacy || true)"
             ARM64="$(echo -n ${d} | grep -o arm64 || true)"
             INST="$(echo -n ${d} | grep -o Setup || true)"
             PORT="$(echo -n ${d} | grep -o Portable || true)"
-            NAME="PrismLauncher-Windows-MSVC"
+            NAME="NMCLauncher-Windows-MSVC"
             test -z "${LEGACY}" || NAME="${NAME}-Legacy"
             test -z "${ARM64}" || NAME="${NAME}-arm64"
             test -z "${PORT}" || NAME="${NAME}-Portable"
-            test -z "${INST}" || mv PrismLauncher-*.exe ../${NAME}-Setup-${{ env.VERSION }}.exe
+            test -z "${INST}" || mv NMCLauncher-*.exe ../${NAME}-Setup-${{ env.VERSION }}.exe
             test -n "${INST}" || zip -r -9 "../${NAME}-${{ env.VERSION }}.zip" *
             cd ..
           done
 
-          for d in PrismLauncher-Windows-MinGW-w64*; do
+          for d in NMCLauncher-Windows-MinGW-w64*; do
             cd "${d}" || continue
             INST="$(echo -n ${d} | grep -o Setup || true)"
             PORT="$(echo -n ${d} | grep -o Portable || true)"
-            NAME="PrismLauncher-Windows-MinGW-w64"
+            NAME="NMCLauncher-Windows-MinGW-w64"
             test -z "${PORT}" || NAME="${NAME}-Portable"
-            test -z "${INST}" || mv PrismLauncher-*.exe ../${NAME}-Setup-${{ env.VERSION }}.exe
+            test -z "${INST}" || mv NMCLauncher-*.exe ../${NAME}-Setup-${{ env.VERSION }}.exe
             test -n "${INST}" || zip -r -9 "../${NAME}-${{ env.VERSION }}.zip" *
             cd ..
           done
@@ -86,23 +86,23 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref }}
-          name: Prism Launcher ${{ env.VERSION }}
+          name: NMCLauncher ${{ env.VERSION }}
           draft: true
           prerelease: false
           files: |
-            PrismLauncher-Linux-Qt5-Portable-${{ env.VERSION }}.tar.gz
-            PrismLauncher-Linux-x86_64.AppImage
-            PrismLauncher-Linux-x86_64.AppImage.zsync
-            PrismLauncher-Linux-Qt6-Portable-${{ env.VERSION }}.tar.gz
-            PrismLauncher-Windows-MinGW-w64-${{ env.VERSION }}.zip
-            PrismLauncher-Windows-MinGW-w64-Portable-${{ env.VERSION }}.zip
-            PrismLauncher-Windows-MinGW-w64-Setup-${{ env.VERSION }}.exe
-            PrismLauncher-Windows-MSVC-arm64-${{ env.VERSION }}.zip
-            PrismLauncher-Windows-MSVC-arm64-Portable-${{ env.VERSION }}.zip
-            PrismLauncher-Windows-MSVC-arm64-Setup-${{ env.VERSION }}.exe
-            PrismLauncher-Windows-MSVC-${{ env.VERSION }}.zip
-            PrismLauncher-Windows-MSVC-Portable-${{ env.VERSION }}.zip
-            PrismLauncher-Windows-MSVC-Setup-${{ env.VERSION }}.exe
-            PrismLauncher-macOS-${{ env.VERSION }}.zip
-            PrismLauncher-macOS-Legacy-${{ env.VERSION }}.zip
-            PrismLauncher-${{ env.VERSION }}.tar.gz
+            NMCLauncher-Linux-Qt5-Portable-${{ env.VERSION }}.tar.gz
+            NMCLauncher-Linux-x86_64.AppImage
+            NMCLauncher-Linux-x86_64.AppImage.zsync
+            NMCLauncher-Linux-Qt6-Portable-${{ env.VERSION }}.tar.gz
+            NMCLauncher-Windows-MinGW-w64-${{ env.VERSION }}.zip
+            NMCLauncher-Windows-MinGW-w64-Portable-${{ env.VERSION }}.zip
+            NMCLauncher-Windows-MinGW-w64-Setup-${{ env.VERSION }}.exe
+            NMCLauncher-Windows-MSVC-arm64-${{ env.VERSION }}.zip
+            NMCLauncher-Windows-MSVC-arm64-Portable-${{ env.VERSION }}.zip
+            NMCLauncher-Windows-MSVC-arm64-Setup-${{ env.VERSION }}.exe
+            NMCLauncher-Windows-MSVC-${{ env.VERSION }}.zip
+            NMCLauncher-Windows-MSVC-Portable-${{ env.VERSION }}.zip
+            NMCLauncher-Windows-MSVC-Setup-${{ env.VERSION }}.exe
+            NMCLauncher-macOS-${{ env.VERSION }}.zip
+            NMCLauncher-macOS-Legacy-${{ env.VERSION }}.zip
+            NMCLauncher-${{ env.VERSION }}.tar.gz
