--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,12 +52,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-20.04
-            qt_ver: 5
+          - os: ubuntu-latest
+            qt_ver: 6
             qt_host: linux
             qt_arch: ""
-            qt_version: "5.15.2"
-            qt_modules: "qtnetworkauth"
+            qt_version: "6.5.3"
+            qt_modules: "qt5compat qtimageformats qtnetworkauth"
+            linuxdeploy_hash: "4648f278ab3ef31f819e67c30d50f462640e5365a77637d7e6f2ad9fd0b4522a linuxdeploy-x86_64.AppImage"
+            linuxdeploy_qt_hash: "15106be885c1c48a021198e7e1e9a48ce9d02a86dd0a1848f00bdbf3c1c92724  linuxdeploy-plugin-qt-x86_64.AppImage"
+            appimageupdate_hash: "f1747cf60058e99f1bb9099ee9787d16c10241313b7acec81810ea1b1e568c11  AppImageUpdate-x86_64.AppImage"
 
           - os: ubuntu-22.04
             qt_ver: 6
