--- a/flatpak/org.sogik.NMCLauncher.yml
+++ b/flatpak/org.sogik.NMCLauncher.yml
@@ -1,11 +1,11 @@
-id: org.prismlauncher.PrismLauncher
+id: org.sogik.NMCLauncher
 runtime: org.kde.Platform
-runtime-version: '6.8'
+runtime-version: "6.8"
 sdk: org.kde.Sdk
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.openjdk17
 
-command: prismlauncher
+command: nmclauncher
 finish-args:
   - --share=ipc
   - --socket=x11
@@ -36,7 +36,7 @@ modules:
   # Text to Speech in the game
   - flite.json
 
-  - name: prismlauncher
+  - name: nmclauncher
     buildsystem: cmake-ninja
     builddir: true
     config-opts:
@@ -142,10 +142,10 @@ modules:
     buildsystem: simple
     build-commands:
       - install -Dm755 prime-run /app/bin/prime-run
-      - mv /app/bin/prismlauncher /app/bin/prismrun
-      - install -Dm755 prismlauncher /app/bin/prismlauncher
+      - mv /app/bin/nmclauncher /app/bin/nmcrun
+      - install -Dm755 nmclauncher /app/bin/nmclauncher
     sources:
       - type: file
         path: prime-run
       - type: file
-        path: prismlauncher
+        path: nmclauncher
