--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -124,7 +124,7 @@ jobs:
         if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         uses: cachix/cachix-action@v16
         with:
-          name: prismlauncher
+          name: nmclauncher
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
       - name: Run Flake checks
