--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           commit-msg: "chore(nix): update lockfile"
           pr-title: "chore(nix): update lockfile"
-          pr-labels: |
-            Linux
-            packaging
-            simple change
-            changelog:omit
+          #pr-labels: |
+            #Linux
+            #packaging
+            #simple change
+            #changelog:omit
